[package]
name = "rterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
eframe = "0.26.2"
egui = "0.26.2"
env_logger = "0.11.1"
libc = "0.2.153"
log = "0.4.20"
nix = {version = "0.27.1", features = ["process", "term", "fs", "ioctl"]}
