[package]
name = "rterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
core-foundation = "0.9.4"
core-text = "20.1.0"
eframe = { version = "0.26.2", features = ["persistence"] }
egui = { version = "0.26.2", features = ["persistence"] }
env_logger = "0.11.1"
libc = "0.2.153"
log = "0.4.20"
nix = {version = "0.27.1", features = ["process", "term", "fs", "ioctl"]}
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
